apps/prod/wedding/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wedding
  namespace: wedding
  labels:
    app: wedding
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wedding
  template:
    metadata:
      labels:
        app: wedding
    spec:
      containers:
        - name: php
          imagePullPolicy: Always
          securityContext:
            # www-data
            runAsUser: 33
            allowPrivilegeEscalation: false
          image: gsdevme/wedding-website:prod
          livenessProbe:
            exec:
              command:
                - echo
                - -n
                - >
                - /dev/tcp/127.0.0.1/9000
            initialDelaySeconds: 5
            periodSeconds: 3
          ports:
            - containerPort: 9000
        - name: nginx
          imagePullPolicy: Always
          image: gsdevme/wedding-website-assets:prod
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: wedding
  name: svc-wedding
spec:
  selector:
    app: wedding
  ports:
    - port: 9000
      targetPort: 9000
      name: php
    - port: 80
      targetPort: 8080
      name: assets
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: wedding
  name: wedding-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "FCGI"
    nginx.ingress.kubernetes.io/fastcgi-index: "index.php"
    nginx.ingress.kubernetes.io/fastcgi-params-configmap: "wedding-config"
spec:
  rules:
    - host: ceilidhandgavin.com
      http:
        paths:
          - path: /robots.txt
            pathType: Prefix
            backend:
              service:
                name: svc-wedding
                port:
                  number: 80
          - path: /favicon.ico
            pathType: Prefix
            backend:
              service:
                name: svc-wedding
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-wedding
                port:
                  number: 9000
  tls:
    - hosts:
        - ceilidhandgavin.com
      secretName: wedding-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: wedding
  name: wedding-assets-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: a.ceilidhandgavin.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-wedding
                port:
                  number: 80
  tls:
    - hosts:
        - a.ceilidhandgavin.com
      secretName: wedding-assets-tls
